--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -83,6 +83,10 @@
     <button class="btn btn-primary">Pesquisar - Itens</button>
 </form>
 
+<form id="form_pedidos" method="post" action="/Home/showSearchPedidosItens">
+    <button class="btn btn-primary">Pesquisar - Itens Pedidos</button>
+</form>
+
 <form id="form_pedidos" method="post" action="/Home/showSearchPedidos">
     <button class="btn btn-primary">Pesquisar - Pedidos</button>
 </form>
